# operation-ledger-mind

./: .gitignore  README.md  RUN_FINETUNE.md  RUN_NOTEBOOK.md  pyproject.toml
.cursor/plans/: intern_fine-tuning_d2f1675d.plan.md
config/: config.yaml
data/output/: golden_test_set.jsonl  train.jsonl
notebooks/: 01_data_factory.ipynb  02_finetuning_intern.ipynb  03_rag_librarian.ipynb  04_evaluation_arena.ipynb
rag notebooks/: 01_naive_rag_from_scratch.ipynb  03_memory_lcel_basics.ipynb  04_advanced_retrieval_rerank_finetune.ipynb
src/evaluation/: __init__.py  cost_analysis.py  metrics.py
src/finetuning/: __init__.py  data.py  intern_inference.py  train_intern.py
src/ingestion/: __init__.py  chunker.py  dataset_writer.py  pdf_loader.py  qa_generator.py  semantic_types.py
src/rag/: __init__.py  __main__.py  cli.py  fusion.py  generation.py  index_builder.py  librarian_inference.py  reranker.py  retrieval.py  weaviate_store.py
src/utils/: __init__.py  config_loader.py  llm_client.py  prompts.py
