[project]
name = "operation-ledger-mind"
version = "0.1.0"
description = "Financial Intelligence System - Fine-Tuning vs RAG Showdown"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    # Fine-tuning stack (QLoRA + TRL). Note: bitsandbytes is typically Linux/Colab-friendly.
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "accelerate>=0.33.0",
    "peft>=0.12.0",
    "trl>=0.9.6",
    "bitsandbytes>=0.43.0",
    "safetensors>=0.4.3",
    "torch>=2.1.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
